--- a/better_otsu.ipynb
+++ b/better_otsu.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 105,
    "outputs": [],
    "source": [
     "\n",
@@ -124,24 +124,87 @@
     "    tiles_sharpened = split_into_tiles(sharpened_img, tile_size)\n",
     "    #do thresholding\n",
     "    thresholded_tiles_sharp = []\n",
-    "    for t in tiles_sharpened:\n",
-    "        #check if mostly white #ATTENTION, im touching the og in memory. If yes set direclty to black\n",
-    "        if check_all_white_tile(t, max_value):\n",
-    "            th = set_zero(t)\n",
-    "            thresholded_tiles_sharp.append(th)\n",
-    "        #else do thresholding\n",
-    "        else:\n",
-    "            r, th = otsu_thresholding(t)\n",
-    "            if np.sum(th == 0) < 215 and np.sum(th == 0) > 190: #we have a bacilli: #we\n",
-    "                new_t=sharpen2(t)\n",
-    "                r,th_new=otsu_thresholding(new_t)\n",
-    "                thresholded_tiles_sharp.append(th_new)\n",
-    "            else:\n",
-    "                thresholded_tiles_sharp.append(th)\n",
+    "    for i,t in enumerate(tiles_sharpened):\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        r, th = otsu_thresholding(t)\n",
+    "        if np.sum(th == 0) < 215 and np.sum(th == 0) > 200: #we have a bacilli: #we\n",
+    "            new_t=sharpen2(t)\n",
+    "            r,th_new=otsu_thresholding(new_t)\n",
+    "            thresholded_tiles_sharp.append(th_new)\n",
+    "        else:\n",
+    "            thresholded_tiles_sharp.append(th)\n",
+    "\n",
+    "    for i, tile1 in enumerate(tiles_sharpened):\n",
+    "        #check if mostly white #ATTENTION, im touching the og in memory. If yes set direclty to black\n",
+    "        if check_all_white_tile(tile1, max_value):\n",
+    "\n",
+    "            thresholded_tiles_sharp[i]=set_zero(thresholded_tiles_sharp[i])\n",
+    "            if i%94 !=0:\n",
+    "                thresholded_tiles_sharp[i-1]=set_zero(thresholded_tiles_sharp[i-1])\n",
+    "            if i%(95) !=0:\n",
+    "                thresholded_tiles_sharp[i-2]=set_zero(thresholded_tiles_sharp[i-2])\n",
+    "            if i%(93) !=0:\n",
+    "                thresholded_tiles_sharp[i+1]=set_zero(thresholded_tiles_sharp[i+1])\n",
+    "            if i%92 !=0:\n",
+    "                thresholded_tiles_sharp[i+2]=set_zero(thresholded_tiles_sharp[i+2])\n",
+    "            if i>94:\n",
+    "                thresholded_tiles_sharp[i-94]=set_zero(thresholded_tiles_sharp[i-94])\n",
+    "            if i>188:\n",
+    "                thresholded_tiles_sharp[i-188]=set_zero(thresholded_tiles_sharp[i-188])\n",
+    "            if i<11938:\n",
+    "                thresholded_tiles_sharp[i+94]=set_zero(thresholded_tiles_sharp[i+94])\n",
+    "            if i<11844:\n",
+    "                 thresholded_tiles_sharp[i+188]=set_zero(thresholded_tiles_sharp[i+188])\n",
+    "            #maybe add diagonals\n",
     "\n",
     "    return thresholded_tiles_sharp\n",
+    "def ignore_connected_component_list(image):\n",
+    "    sharpened_img = sharpen(img)\n",
+    "    #get the maximum of the sharpened img, needed to check ig image is all white\n",
+    "    max_value = sharpened_img.max()\n",
+    "    tiles_sharpened = split_into_tiles(sharpened_img, 16)\n",
+    "    list_indices_of_tiles_to_ignore=[]\n",
+    "    for i, tile1 in enumerate(tiles_sharpened):\n",
+    "        #check if mostly white #ATTENTION, im touching the og in memory. If yes set direclty to black\n",
+    "        if check_all_white_tile(tile1, max_value):\n",
+    "            list_indices_of_tiles_to_ignore.append(i)\n",
     "\n",
+    "\n",
+    "            if i%94 !=0:\n",
+    "                list_indices_of_tiles_to_ignore.append(i-1)\n",
+    "            if i%(95) !=0:\n",
+    "                list_indices_of_tiles_to_ignore.append(i-2)\n",
+    "\n",
+    "            if i%(93) !=0:\n",
+    "                list_indices_of_tiles_to_ignore.append(i+1)\n",
+    "\n",
+    "            if i%92 !=0:\n",
+    "                list_indices_of_tiles_to_ignore.append(i+2)\n",
+    "\n",
+    "            if i>94:\n",
+    "                list_indices_of_tiles_to_ignore.append(i-94)\n",
+    "            if i>188:\n",
+    "                list_indices_of_tiles_to_ignore.append(i-188)\n",
+    "            if i<11938:\n",
+    "                list_indices_of_tiles_to_ignore.append(i+94)\n",
+    "            if i<11844:\n",
+    "                list_indices_of_tiles_to_ignore.append(i+188)\n",
+    "            if i>94 and i%94 !=0:\n",
+    "                list_indices_of_tiles_to_ignore.append(i-95)\n",
+    "            if i>94 and i%(93) !=0:\n",
+    "                list_indices_of_tiles_to_ignore.append(i-93)\n",
+    "            if i<11938 and i%94 !=0:\n",
+    "                list_indices_of_tiles_to_ignore.append(i+93)\n",
+    "            if i<11938 and i%(93) !=0:\n",
+    "                list_indices_of_tiles_to_ignore.append(i+95)\n",
+    "            #maybe add more to diagonal\n",
+    "    return list_indices_of_tiles_to_ignore\n",
+    "\n",
+    "def set_to_zero_advanced():\n",
+    "    return False\n",
     "\n",
     "def otsu_cleaned_split_thresholding(img):\n",
     "    \"\"\"\n",
@@ -257,6 +320,7 @@
     "    return img2\n",
     "\n",
     "\n",
+    "\n",
     "# add the 2d bounding boxes to the image\n",
     "def add_bounding_boxes(image, stats):\n",
     "    \"\"\"\n",
@@ -275,6 +339,28 @@
     "        cv.rectangle(image, (x, y), (x + w + 10, y + h + 10), (5000, 255, 255), 1)\n",
     "    return image\n",
     "\n",
+    "#given image and connected componets stats find center of mass of each connected component\n",
+    "def find_center_of_mass( stats):\n",
+    "    center_of_mass = []\n",
+    "    for i in range(1, stats.shape[0]):\n",
+    "        #find center of mass\n",
+    "        x = stats[i, 0]\n",
+    "        y = stats[i, 1]\n",
+    "        w = stats[i, 2]\n",
+    "        h = stats[i, 3]\n",
+    "        #find center of mass\n",
+    "        center_of_mass.append((x + w//2, y + h//2))\n",
+    "    return center_of_mass\n",
+    "\n",
+    "#given image and center of mass list give back a list of images 50x50 pixels around the center of mass\n",
+    "\n",
+    "def crop_images(image, center_of_mass):\n",
+    "    cropped_images = []\n",
+    "    for i in range(len(center_of_mass)):\n",
+    "        x = center_of_mass[i][0]\n",
+    "        y = center_of_mass[i][1]\n",
+    "        cropped_images.append(image[y-25:y+25, x-25:x+25])\n",
+    "    return cropped_images\n",
     "\n",
     "def sharpen2(img):\n",
     "    return cv.addWeighted(img, 4, cv.blur(img, (30, 30)), -4, 128)\n"
@@ -285,22 +371,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "file://C:/Users/matteo/Desktop/proiecc/extern_Synlab_2156_17_3_MTB.czi",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[3], line 4\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m#PIPELINE (until the end)\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \n\u001B[0;32m      3\u001B[0m \u001B[38;5;66;03m# Load the image\u001B[39;00m\n\u001B[1;32m----> 4\u001B[0m reader \u001B[38;5;241m=\u001B[39m \u001B[43mCziReader\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mextern_Synlab_2156_17_3_MTB.czi\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;66;03m# Get whole image\u001B[39;00m\n\u001B[0;32m      6\u001B[0m smear \u001B[38;5;241m=\u001B[39m reader\u001B[38;5;241m.\u001B[39mget_image_data(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mMYX\u001B[39m\u001B[38;5;124m\"\u001B[39m, C\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m)\n",
-      "File \u001B[1;32m~\\anaconda3\\envs\\tub\\lib\\site-packages\\aicsimageio\\readers\\czi_reader.py:112\u001B[0m, in \u001B[0;36mCziReader.__init__\u001B[1;34m(self, image, chunk_dims, include_subblock_metadata, fs_kwargs)\u001B[0m\n\u001B[0;32m    104\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\n\u001B[0;32m    105\u001B[0m     \u001B[38;5;28mself\u001B[39m,\n\u001B[0;32m    106\u001B[0m     image: types\u001B[38;5;241m.\u001B[39mPathLike,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    110\u001B[0m ):\n\u001B[0;32m    111\u001B[0m     \u001B[38;5;66;03m# Expand details of provided image\u001B[39;00m\n\u001B[1;32m--> 112\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_fs, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_path \u001B[38;5;241m=\u001B[39m \u001B[43mio_utils\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpathlike_to_fs\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    113\u001B[0m \u001B[43m        \u001B[49m\u001B[43mimage\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    114\u001B[0m \u001B[43m        \u001B[49m\u001B[43menforce_exists\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[0;32m    115\u001B[0m \u001B[43m        \u001B[49m\u001B[43mfs_kwargs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mfs_kwargs\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    116\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    118\u001B[0m     \u001B[38;5;66;03m# Catch non-local file system\u001B[39;00m\n\u001B[0;32m    119\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_fs, LocalFileSystem):\n",
-      "File \u001B[1;32m~\\anaconda3\\envs\\tub\\lib\\site-packages\\aicsimageio\\utils\\io_utils.py:56\u001B[0m, in \u001B[0;36mpathlike_to_fs\u001B[1;34m(uri, enforce_exists, fs_kwargs)\u001B[0m\n\u001B[0;32m     54\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m enforce_exists:\n\u001B[0;32m     55\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m fs\u001B[38;5;241m.\u001B[39mexists(path):\n\u001B[1;32m---> 56\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mFileNotFoundError\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mfs\u001B[38;5;241m.\u001B[39mprotocol\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m://\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mpath\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m     58\u001B[0m \u001B[38;5;66;03m# Get and store details\u001B[39;00m\n\u001B[0;32m     59\u001B[0m \u001B[38;5;66;03m# We do not return an AbstractBufferedFile (i.e. fs.open) as we do not want to have\u001B[39;00m\n\u001B[0;32m     60\u001B[0m \u001B[38;5;66;03m# any open file buffers _after_ any API call. API calls must themselves call\u001B[39;00m\n\u001B[0;32m     61\u001B[0m \u001B[38;5;66;03m# fs.open and complete their function during the context of the opened buffer.\u001B[39;00m\n\u001B[0;32m     62\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m fs, path\n",
-      "\u001B[1;31mFileNotFoundError\u001B[0m: file://C:/Users/matteo/Desktop/proiecc/extern_Synlab_2156_17_3_MTB.czi"
-     ]
-    }
+   "execution_count": 157,
+   "outputs": [],
+   "source": [
+    "# detect blurry image based on fourier transform\n",
+    "def is_blurry(image):\n",
+    "    #convert image to grayscale\n",
+    "\n",
+    "    #find fourier transform\n",
+    "    f = np.fft.fft2(image)\n",
+    "    fshift = np.fft.fftshift(f)\n",
+    "    magnitude_spectrum = 20*np.log(np.abs(fshift))\n",
+    "    #find mean of magnitude spectrum\n",
+    "    mean = np.mean(magnitude_spectrum)\n",
+    "    #print(mean)\n",
+    "    #if mean is less than 100 then image is blurry\n",
+    "    if mean < 220:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
    "source": [
     "\n",
     "#PIPELINE (until the end)\n",
@@ -316,14 +414,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "outputs": [],
    "source": [
     "\n",
     "# save in a new variable the information regarding the 673th tile out of 1345\n",
-    "img = smear[673]\n",
-    "print(img.shape)\n",
-    "real_image = img.copy()"
+    "booleanimg=[]\n",
+    "for i,img in enumerate(smear):\n",
+    "\n",
+    "    if is_blurry(img):\n",
+    "        booleanimg.append(0)\n",
+    "    else:\n",
+    "        booleanimg.append(1)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "625\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(booleanimg))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: QWindowsWindow::setGeometry: Unable to set geometry 1280x1104+0+34 (frame: 1302x1160-11-11) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 1280x1102+0+34 (frame: 1302x1158-11-11) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n",
+      "22-Dec-22 11:22:06 - vispy    - WARNING  - QWindowsWindow::setGeometry: Unable to set geometry 1280x1104+0+34 (frame: 1302x1160-11-11) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 1280x1102+0+34 (frame: 1302x1158-11-11) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "viewer = napari.view_image(smear)"
    ],
    "metadata": {
     "collapsed": false
@@ -332,6 +480,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ground_t=[1,1,0]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "outputs": [],
    "source": [
     "\n",
@@ -346,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "outputs": [],
    "source": [
     "\n",
@@ -360,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "outputs": [],
    "source": [
     "\n",
@@ -373,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "outputs": [],
    "source": [
     "\n",
@@ -386,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "outputs": [],
    "source": [
     "\n",
@@ -399,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "outputs": [],
    "source": [
     "\n",
@@ -413,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "outputs": [],
    "source": [
     "\n",
@@ -426,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "outputs": [],
    "source": [
     "\n",
@@ -441,8 +600,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 115,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\matteo\\anaconda3\\envs\\tub\\lib\\site-packages\\napari\\_qt\\qt_event_loop.py:284: FutureWarning: \n",
+      "The 'gui_qt()' context manager is deprecated.\n",
+      "If you are running napari from a script, please use 'napari.run()' as follows:\n",
+      "\n",
+      "    import napari\n",
+      "\n",
+      "    viewer = napari.Viewer()  # no prior setup needed\n",
+      "    # other code using the viewer...\n",
+      "    napari.run()\n",
+      "\n",
+      "In IPython or Jupyter, 'napari.run()' is not necessary. napari will automatically\n",
+      "start an interactive event loop for you: \n",
+      "\n",
+      "    import napari\n",
+      "    viewer = napari.Viewer()  # that's it!\n",
+      "\n",
+      "  warn(\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#visualize\n",
@@ -451,6 +634,15 @@
     "     otsu_st_16_cleaned_from_noise, otsu_st_16, img],\n",
     "    [\"og boxes\", \"boxes\", \"no 1s and unite bacilli\", \"a bit of artifacts\", \"cleaned split otsu\", \"split otsu\", \"og\"])"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
