--- a/cleaned_otsu_thresholding.ipynb
+++ b/cleaned_otsu_thresholding.ipynb
@@ -206,7 +206,7 @@
     "    :param max_value: max value pixel of whole image\n",
     "    :return:\n",
     "    \"\"\"\n",
-    "    if np.sum(img > 0.2* max_value_global) > 0.8*img.shape[0]*img.shape[1]:\n",
+    "    if np.sum(img > 0.2* max_value_global) > 0.9*img.shape[0]*img.shape[1]:\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
@@ -259,8 +259,20 @@
     "            #y_max = coordinates[i][1]\n",
     "            h=stats[i][3]\n",
     "            w=stats[i][2]\n",
-    "            cv.rectangle(image, (x, y), (x+w+10, y+h+10), (255, 0, 0), 1)\n",
+    "            cv.rectangle(image, (x, y), (x+w+10, y+h+10), (5000, 255, 255), 1)\n",
     "    return image"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [],
+   "source": [
+    "def sharpen2(img):\n",
+    "    return cv.addWeighted(img, 4, cv.blur(img, (30, 30)), -4, 128)"
    ],
    "metadata": {
     "collapsed": false
@@ -284,12 +296,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2048, 1504)\n"
+     ]
+    }
+   ],
    "source": [
     "# save in a new variable the information regarding the 673th tile out of 1345\n",
-    "img = smear[674]\n",
-    "img.shape\n",
+    "img = smear[673]\n",
+    "print(img.shape)\n",
     "real_image=img.copy()"
    ],
    "metadata": {
@@ -298,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "#for comparison\n",
@@ -312,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "#do split thresholding\n",
@@ -324,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "#do split thresholding and clean noise from thresholding\n",
@@ -336,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "#save new copy for comparison, not needed if we dont want comparison\n",
@@ -348,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "#cut small connected components and connect bacilli\n",
@@ -360,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "#get stats for drawing boxes\n",
@@ -372,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "#another copy----ask marina\n",
@@ -384,11 +404,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "#add the boxes\n",
     "box_bacilli = add_bounding_boxes(bacilli, stats)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "img_copy=img.copy()\n",
+    "box_img=add_bounding_boxes(img_copy,stats)"
    ],
    "metadata": {
     "collapsed": false
@@ -419,14 +451,29 @@
       "    viewer = napari.Viewer()  # that's it!\n",
       "\n",
       "  warn(\n",
-      "WARNING: QWindowsWindow::setGeometry: Unable to set geometry 1280x1104+0+34 (frame: 1302x1160-11-11) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 1280x1102+0+34 (frame: 1302x1158-11-11) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n",
-      "18-Dec-22 13:00:08 - vispy    - WARNING  - QWindowsWindow::setGeometry: Unable to set geometry 1280x1104+0+34 (frame: 1302x1160-11-11) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 1280x1102+0+34 (frame: 1302x1158-11-11) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n"
+      "WARNING: QWindowsWindow::setGeometry: Unable to set geometry 2172x1352+0+20 (frame: 2194x1408-11-25) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 1924x1335+3+34 (frame: 1946x1391-8-11) margins: 11, 45, 11, 11 minimum size: 374x552 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1160 maxtrack=0,0)\n",
+      "21-Dec-22 17:02:57 - vispy    - WARNING  - QWindowsWindow::setGeometry: Unable to set geometry 2172x1352+0+20 (frame: 2194x1408-11-25) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 1924x1335+3+34 (frame: 1946x1391-8-11) margins: 11, 45, 11, 11 minimum size: 374x552 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1160 maxtrack=0,0)\n"
      ]
     }
    ],
    "source": [
     "#visualize\n",
-    "visualize_all_list_napari([box_bacilli,cleaning_the_shit_on_the_bacilli_tiles,a_bit_of_shit_in_our_bacilli_tiles,otsu_st_16_cleaned_from_noise,otsu_st_16,img],[\"boxes\",\"no 1s and unite bacilli\", \"a bit of artifacts\",\"cleaned split otsu\",\"split otsu\",\"og\"])"
+    "visualize_all_list_napari([box_img,box_bacilli,cleaning_the_shit_on_the_bacilli_tiles,a_bit_of_shit_in_our_bacilli_tiles,otsu_st_16_cleaned_from_noise,otsu_st_16,img],[\"og boxes\",\"boxes\",\"no 1s and unite bacilli\", \"a bit of artifacts\",\"cleaned split otsu\",\"split otsu\",\"og\"])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "#fucntion for adding paadding to the image\n",
+    "def add_padding(image):\n",
+    "\n",
+    "    image = np.pad(image, 8, 'edge')\n",
+    "    return image"
    ],
    "metadata": {
     "collapsed": false
