cleaned masking notebook

--- a/masking.ipynb
+++ b/masking.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,49 @@
     "\n",
     "\n",
     "\n",
+    "# THRESHOLDING\n",
+    "\n",
+    "# compute Otsu's thresholding\n",
+    "def adpt_g_thresholding(image: np.ndarray):\n",
+    "    \"\"\"\n",
+    "    Threshold and binarize an image using adaptive thresholding using a Gaussian weighted sum\n",
+    "\n",
+    "    :param image: image you want to threshold\n",
+    "    :return: ret: threshold value\n",
+    "              th: binary image\n",
+    "    \"\"\"\n",
+    "    # The threshold value is a gaussian-weighted sum of the neighbourhood (here of size 25) values minus the constant C (which is set to -7)\n",
+    "    th = cv.adaptiveThreshold(image,255,cv.ADAPTIVE_THRESH_MEAN_C,cv.THRESH_BINARY,25,-7)\n",
+    "    \n",
+    "    # ret is the computed value of the threshold AND th is the image with the threshold applied\n",
+    "    return th\n",
+    "\n",
+    "\n",
+    "\n",
     "# POSTPROCESSING \n",
+    "\n",
+    "# remove noise\n",
+    "def remove_noise(image: np.ndarray):\n",
+    "    \"\"\"\n",
+    "    Clean image by removing connected components that have are up to 5 pixels\n",
+    "\n",
+    "    :param img: image to be cleaned\n",
+    "    :return:    cleaned image\n",
+    "    \"\"\"\n",
+    "    # find connected components\n",
+    "    num_labels, labels, stats, centroids = cv.connectedComponentsWithStats(image, connectivity=8)\n",
+    "    # stats = x, y, w, h, area\n",
+    "    \n",
+    "    # create copy\n",
+    "    image_copy = image.copy()\n",
+    "\n",
+    "    # put to black connected components which area is equal to 1 or 2\n",
+    "    for i in range(1, num_labels):\n",
+    "        if stats[i][4] < 6:\n",
+    "            image_copy[labels == i] = 0\n",
+    "    \n",
+    "    return image_copy\n",
+    "\n",
     "\n",
     "# add 2D bounding boxes to the image\n",
     "def add_bounding_boxes(image, stats):\n",
@@ -94,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,58 +184,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# rescale image to uint8\n",
     "rescaled_img = rescale(img)\n",
-    "sharpened_img = sharpen(rescaled_img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "blurred_img = cv.medianBlur(rescaled_img,1)\n",
-    "th2 = cv.adaptiveThreshold(rescaled_img,255,cv.ADAPTIVE_THRESH_MEAN_C,cv.THRESH_BINARY,25,-5) # negative Werte erhöhen den Schwarzanteil, positive den Weißanteil\n",
-    "th3 = cv.adaptiveThreshold(rescaled_img,255,cv.ADAPTIVE_THRESH_GAUSSIAN_C,cv.THRESH_BINARY,25,-5)\n",
     "\n",
-    "th2_copy = th2.copy()\n",
-    "th3_copy = th3.copy()\n",
+    "# apply adaptive thresholding using a Gaussian weighted sum\n",
+    "th = adpt_g_thresholding(rescaled_img)\n",
     "\n",
-    "num_labels2, labels_im2, stats2, centroids2 = cv.connectedComponentsWithStats(th2_copy, connectivity=8)\n",
-    "num_labels3, labels_im3, stats3, centroids3 = cv.connectedComponentsWithStats(th3_copy, connectivity=8)\n",
+    "# remove noise from binarized image\n",
+    "th_clean = remove_noise(th)\n",
     "\n",
-    "# clean from noise (setting connected components of five or less white pixels to zero)\n",
-    "for i in range(1, num_labels2):\n",
-    "    if stats2[i][4] < 6:\n",
-    "        th2_copy[labels_im2 == i] = 0\n",
+    "# retrieve stats in order to add boxes around connected components, i.e., objects\n",
+    "num_labels, labels, stats, centroids = cv.connectedComponentsWithStats(th_clean, connectivity=8)\n",
     "\n",
-    "for i in range(1, num_labels3):\n",
-    "    if stats3[i][4] < 6:\n",
-    "        th3_copy[labels_im3 == i] = 0\n",
-    "\n",
-    "num_labels2, labels_im2, stats2, centroids2 = cv.connectedComponentsWithStats(th2_copy, connectivity=8)\n",
-    "num_labels3, labels_im3, stats3, centroids3 = cv.connectedComponentsWithStats(th3_copy, connectivity=8)\n",
-    "\n",
-    "th2_boxes = add_bounding_boxes(th2_copy, stats2)\n",
-    "th3_boxes = add_bounding_boxes(th3_copy, stats3)\n",
+    "# add boxes to binarized image\n",
+    "th_masked = add_bounding_boxes(th_clean, stats)\n",
     "\n",
     "# add boxes to original image\n",
     "img_copy = img.copy()\n",
-    "og_boxes2 = add_bounding_boxes(img_copy, stats2)\n",
-    "img_copy = img.copy()\n",
-    "og_boxes3 = add_bounding_boxes(img_copy, stats3)\n",
+    "og_masked = add_bounding_boxes(img_copy, stats)\n",
     "\n",
-    "titles = ['Original Rescaled Image', 'Sharpened Image', 'Blurred Image', 'Adaptive Mean Thresholding', 'Adaptive Gaussian Thresholding', 'Boxes Mean Thresholding', 'Boxes Gaussian Thresholding', 'Boxes OG Mean', 'Boxes OG Gaussian']\n",
-    "images = [rescaled_img, sharpened_img, blurred_img, th2, th3, th2_boxes, th3_boxes, og_boxes2, og_boxes3]"
+    "titles = ['Original Rescaled Image', 'Binarized Image', 'Binarized w/Boxes', 'OG w/Boxes']\n",
+    "images = [rescaled_img, th, th_masked, og_masked]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
