Remove noise using morphological opening/closing

--- a/masking.ipynb
+++ b/masking.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "\n",
     "# THRESHOLDING\n",
     "\n",
-    "# compute Otsu's thresholding\n",
+    "# apply adaptive thresholding with Gaussian weighted sum\n",
     "def adpt_g_thresholding(image: np.ndarray):\n",
     "    \"\"\"\n",
     "    Threshold and binarize an image using adaptive thresholding using a Gaussian weighted sum\n",
@@ -82,7 +82,7 @@
     "              th: binary image\n",
     "    \"\"\"\n",
     "    # The threshold value is a gaussian-weighted sum of the neighbourhood (here of size 25) values minus the constant C (which is set to -7)\n",
-    "    th = cv.adaptiveThreshold(image,255,cv.ADAPTIVE_THRESH_MEAN_C,cv.THRESH_BINARY,25,-7)\n",
+    "    th = cv.adaptiveThreshold(image,255,cv.ADAPTIVE_THRESH_MEAN_C,cv.THRESH_BINARY,25,-5)\n",
     "    \n",
     "    # ret is the computed value of the threshold AND th is the image with the threshold applied\n",
     "    return th\n",
@@ -94,24 +94,22 @@
     "# remove noise\n",
     "def remove_noise(image: np.ndarray):\n",
     "    \"\"\"\n",
-    "    Clean image by removing connected components that have are up to 5 pixels\n",
+    "    Perform morphological opening and closing to remove noise\n",
     "\n",
     "    :param img: image to be cleaned\n",
     "    :return:    cleaned image\n",
     "    \"\"\"\n",
-    "    # find connected components\n",
-    "    num_labels, labels, stats, centroids = cv.connectedComponentsWithStats(image, connectivity=8)\n",
-    "    # stats = x, y, w, h, area\n",
-    "    \n",
-    "    # create copy\n",
-    "    image_copy = image.copy()\n",
     "\n",
-    "    # put to black connected components which area is equal to 1 or 2\n",
-    "    for i in range(1, num_labels):\n",
-    "        if stats[i][4] < 6:\n",
-    "            image_copy[labels == i] = 0\n",
+    "    # define kernel for opening\n",
+    "    kernel = cv.getStructuringElement(cv.MORPH_RECT,(2,2))\n",
+    "\n",
+    "    # perform morphological opening to remove background noise\n",
+    "    opening = cv.morphologyEx(image, cv.MORPH_OPEN, kernel)\n",
+    "\n",
+    "    # perform morphological closing to close small holes inside foreground objects\n",
+    "    closing = cv.morphologyEx(opening, cv.MORPH_CLOSE, kernel)\n",
     "    \n",
-    "    return image_copy\n",
+    "    return closing\n",
     "\n",
     "\n",
     "# add 2D bounding boxes to the image\n",
@@ -122,6 +120,7 @@
     "    :param image: image with bacilli to be boxed\n",
     "    :param coordinates:  coordinates of the center of the bacillus\n",
     "    \"\"\"\n",
+    "    image_copy = image.copy()\n",
     "    for i in range(1,len(stats)):\n",
     "            x = stats[i][0] - 5\n",
     "            #x_max = coordinates[i][0]\n",
@@ -129,9 +128,9 @@
     "            #y_max = coordinates[i][1]\n",
     "            h=stats[i][3]\n",
     "            w=stats[i][2]\n",
-    "            cv.rectangle(image, (x, y), (x+w+10, y+h+10), (255, 0, 0), 1)\n",
+    "            cv.rectangle(image_copy, (x, y), (x+w+10, y+h+10), (255, 0, 0), 1)\n",
     "    \n",
-    "    return image"
+    "    return image_copy"
    ]
   },
   {
@@ -149,42 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save 675th tile from smear in separate variable and create a copy for future purposes\n",
-    "img = smear[674]\n",
-    "img_copy = img.copy()"
+    "img = smear[674]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16414 104\n",
-      "1504 2048\n"
-     ]
-    }
-   ],
-   "source": [
-    "maximum = np.max(img)\n",
-    "minimum = np.min(img)\n",
-    "print(maximum, minimum)\n",
-    "\n",
-    "wid = img.shape[1]\n",
-    "hgt = img.shape[0]\n",
-    "print(wid, hgt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,28 +166,27 @@
     "rescaled_img = rescale(img)\n",
     "\n",
     "# apply adaptive thresholding using a Gaussian weighted sum\n",
-    "th = adpt_g_thresholding(rescaled_img)\n",
+    "thd_img = adpt_g_thresholding(rescaled_img)\n",
     "\n",
-    "# remove noise from binarized image\n",
-    "th_clean = remove_noise(th)\n",
+    "# remove noise from binarized image using morphological opening and closing \n",
+    "cleaned_thd_img = remove_noise(thd_img)\n",
     "\n",
     "# retrieve stats in order to add boxes around connected components, i.e., objects\n",
-    "num_labels, labels, stats, centroids = cv.connectedComponentsWithStats(th_clean, connectivity=8)\n",
+    "num_labels, labels, stats, centroids = cv.connectedComponentsWithStats(cleaned_thd_img, connectivity=8)\n",
     "\n",
-    "# add boxes to binarized image\n",
-    "th_masked = add_bounding_boxes(th_clean, stats)\n",
+    "# add boxes to cleaned, binarized image\n",
+    "masked_thd_img = add_bounding_boxes(cleaned_thd_img, stats)\n",
     "\n",
     "# add boxes to original image\n",
-    "img_copy = img.copy()\n",
-    "og_masked = add_bounding_boxes(img_copy, stats)\n",
+    "masked_img = add_bounding_boxes(img, stats)\n",
     "\n",
-    "titles = ['Original Rescaled Image', 'Binarized Image', 'Binarized w/Boxes', 'OG w/Boxes']\n",
-    "images = [rescaled_img, th, th_masked, og_masked]"
+    "titles = ['Original Rescaled Image', 'Binarized Image', 'Cleaned Binarized', 'Binarized w/Boxes', 'OG w/Boxes']\n",
+    "images = [rescaled_img, thd_img, cleaned_thd_img, masked_thd_img, masked_img]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
