--- a/masking.ipynb
+++ b/masking.ipynb
@@ -71,7 +71,7 @@
     "              th: binary image\n",
     "    \"\"\"\n",
     "    # The threshold value is a gaussian-weighted sum of the neighbourhood (here of size 25) values minus the constant C (which is set to -7)\n",
-    "    th = cv.adaptiveThreshold(image,255,cv.ADAPTIVE_THRESH_MEAN_C,cv.THRESH_BINARY,25,-5)\n",
+    "    th = cv.adaptiveThreshold(image,255,cv.ADAPTIVE_THRESH_GAUSSIAN_C,cv.THRESH_BINARY,25,-5)\n",
     "    \n",
     "    return th\n",
     "\n",
@@ -223,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
