better blurry deselect

--- a/cleaned_otsu_thresholding.ipynb
+++ b/cleaned_otsu_thresholding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "#ALL USED FUNCTIONS\n",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "#PIPELINE (until the end)\n",
@@ -296,14 +296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def is_blurry(image):\n",
     "    #compute laplacian of image\n",
     "    laplacian = cv.Laplacian(image, cv.CV_64F)\n",
     "    #compute variance of laplacian\n",
-    "    measure=laplacian.var()/(np.mean(image))\n",
+    "    measure=laplacian.mean()\n",
     "    #print(measure)\n",
     "    return measure"
    ],
@@ -313,7 +313,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "def is_blurry2(image):\n",
+    "    image= np.pad(image, ((0, 1),(0,1)), 'constant')\n",
+    "    values=np.array([])\n",
+    "    kernel = np.array([[0,1,0],[1,-4,1],[0,1,0]])\n",
+    "    #apply kernel to image and store output in list\n",
+    "    for i in range(1, image.shape[0]-1):\n",
+    "        print(i)\n",
+    "        for j in range(1, image.shape[1]-1):\n",
+    "            #apply kernel to image\n",
+    "            value = np.sum(kernel*image[i-1:i+2,j-1:j+2])\n",
+    "            values= np.append(values,value)\n",
+    "    #get mean value of the list\n",
+    "    mean = np.mean(values)\n",
+    "    return mean"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "121.89208553231896\n"
+     ]
+    }
+   ],
+   "source": [
+    "img=smear[673]\n",
+    "#a=is_blurry2(img)\n",
+    "b=is_blurry(img)\n",
+    "#print(a)\n",
+    "print(b)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -1701,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -1865,7 +1923,9 @@
       "    import napari\n",
       "    viewer = napari.Viewer()  # that's it!\n",
       "\n",
-      "  warn(\n"
+      "  warn(\n",
+      "WARNING: QWindowsWindow::setGeometry: Unable to set geometry 2172x1352+12+46 (frame: 2194x1408+1+1) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 1924x1102+12+46 (frame: 1946x1158+1+1) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n",
+      "15-Jan-23 11:09:42 - vispy    - WARNING  - QWindowsWindow::setGeometry: Unable to set geometry 2172x1352+12+46 (frame: 2194x1408+1+1) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 1924x1102+12+46 (frame: 1946x1158+1+1) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n"
      ]
     }
    ],
